--- a/FE/src/app/features/apartment/components/apartment-primary-info/apartment-primary-info.component.html
+++ b/FE/src/app/features/apartment/components/apartment-primary-info/apartment-primary-info.component.html
@@ -47,7 +47,7 @@
       </li>
       <li>
         <strong><i class="fa-regular fa-calendar-plus"></i>Ngày đăng:</strong>
-        {{ post?.createdAt | date : "MM/dd/yyyy" }}
+        {{ post?.createdAt | date : "dd/MM/yyyy" }}
       </li>
     </div>
   </ul>
