--- a/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
+++ b/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
@@ -59,7 +59,7 @@
     </div>
     <p class="card-text">
       <i class="fa-regular fa-calendar-days"></i>
-      Đã Tham gia: {{ landlord?.createdAt | date : "MM/dd/yyyy" }}
+      Đã Tham gia: {{ landlord?.createdAt | date : "dd/MM/yyyy" }}
     </p>
     <p class="card-text">
       <i class="fa-solid fa-phone"></i>
