--- a/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
@@ -24,7 +24,7 @@
       <tr>
         <th scope="row">Ngày sinh</th>
         <td>
-          {{ user?.dateOfBirth | date : "MM/dd/yyyy" }}
+          {{ user?.dateOfBirth | date : "dd/MM/yyyy" }}
         </td>
       </tr>
       <tr>
