--- a/FE/src/app/features/profiles/pages/profile/profile.component.html
+++ b/FE/src/app/features/profiles/pages/profile/profile.component.html
@@ -51,23 +51,23 @@
                 <li class="mb-2">
                   <a
                     matRipple
-                    routerLink="/profile/history"
-                    class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
-                    routerLinkActive="active"
-                  >
-                    <i class="fa-solid fa-clock-rotate-left"></i>
-                    <span>Lịch sử thuê trọ</span>
-                  </a>
-                </li>
-                <li class="mb-2">
-                  <a
-                    matRipple
                     routerLink="/profile/reservation"
                     class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                     routerLinkActive="active"
                   >
                     <i class="fa-solid fa-calendar-days"></i>
                     <span>Danh sách đặt lịch</span>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a
+                    matRipple
+                    routerLink="/profile/history"
+                    class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
+                    routerLinkActive="active"
+                  >
+                    <i class="fa-solid fa-clock-rotate-left"></i>
+                    <span>Lịch sử đặt phòng</span>
                   </a>
                 </li>
                 <li class="mb-2">
@@ -89,7 +89,7 @@
                     routerLinkActive="active"
                   >
                     <i class="fa-solid fa-clock-rotate-left"></i>
-                    <span>Các hoạt động</span>
+                    <span>Hoạt động</span>
                   </a>
                 </li>
               </ul>
