--- a/FE/src/app/shared/components/pagination/pagination.component.html
+++ b/FE/src/app/shared/components/pagination/pagination.component.html
@@ -1,3 +1,4 @@
+@if(count / pageSize > 1){
 <div class="container">
   <ngb-pagination
     [collectionSize]="count"
@@ -23,3 +24,5 @@
     ></ng-template>
   </ngb-pagination>
 </div>
+
+}
