--- a/FE/src/app/features/booking/components/booking-list/booking-list.component.html
+++ b/FE/src/app/features/booking/components/booking-list/booking-list.component.html
@@ -1,12 +1,7 @@
 <div class="checked-out-room">
-  <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
+  <h5 class="fs-5 fw-bold mt-3 mb-4">Danh sách yêu cầu xem phòng</h5>
   <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
-    <div class="col-lg-3">
-      <button routerLink="/lessor/apartment/insert" class="btn btn-dark w-100">
-        Thêm phòng mới
-      </button>
-    </div>
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <app-search
         [placeholder]="'Tìm kiếm...'"
         (search)="onSearch($event)"
@@ -17,49 +12,73 @@
   <div class="position-relative">
     <div [hidden]="dataSource.data.length == 0">
       <table mat-table [dataSource]="dataSource" matSort>
-        <!-- Name Column -->
+        <!-- Room name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-        </ng-container>
-
-        <!-- Category Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Thể loại</th>
           <td mat-cell *matCellDef="let element">
-            {{ categoryFilter[element.category] }}
+            {{ element.post?.room?.name }}
           </td>
         </ng-container>
 
-        <!-- Address Column-->
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Địa chỉ</th>
-          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+        <!-- NumberOfTenant Column -->
+        <ng-container matColumnDef="numberOfTenant">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Số người</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.numberOfTenant }}
+          </td>
         </ng-container>
 
-        <!-- Area Column-->
-        <ng-container matColumnDef="area">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Diện tích</th>
-          <td mat-cell *matCellDef="let element">{{ element.area }}</td>
+        <!-- IntendedIntoDate Column -->
+        <ng-container matColumnDef="intendedIntoDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Ngày bắt đầu
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.intendedIntoDate | date : "dd/MM/yyyy" }}
+          </td>
+        </ng-container>
+
+        <!-- EndDate Column-->
+        <ng-container matColumnDef="endDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Ngày kết thúc
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.endDate | date : "dd/MM/yyyy" }}
+          </td>
         </ng-container>
 
         <!-- Price Column-->
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
-          <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-        </ng-container>
-
-        <!-- CreatedAt Column-->
-        <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày tạo</th>
-          <td mat-cell *matCellDef="let element">{{ element.createdAt | date : "MM/dd/yyyy" }}</td>
-        </ng-container>
-
-        <!-- Condition Column-->
-        <ng-container matColumnDef="condition">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
           <td mat-cell *matCellDef="let element">
-            {{ conditionFilter[element.condition] }}
+            {{ element.post?.room?.price }} đồng
+          </td>
+        </ng-container>
+
+        <!-- Deposite Column-->
+        <ng-container matColumnDef="deposite">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Tiền đặt cọc
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.post?.room?.deposite }} đồng
+          </td>
+        </ng-container>
+
+        <!-- SatusLease Column-->
+        <ng-container matColumnDef="statusLease">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Hợp đồng</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.statusLease }}
+          </td>
+        </ng-container>
+
+        <!-- Status Column-->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
+          <td mat-cell *matCellDef="let element">
+            {{ StatusBookingFilter[element.status] }}
           </td>
         </ng-container>
 
@@ -83,7 +102,10 @@
                 <i class="fa-solid fa-wrench"></i>
                 <span>Sửa</span>
               </button>
-              <button (click)="onDelete(element.id)" mat-menu-item>
+              <button
+                (click)="onDelete(element.id, element.status)"
+                mat-menu-item
+              >
                 <i class="fa-solid fa-trash"></i>
                 <span>Xóa</span>
               </button>
@@ -106,7 +128,7 @@
 
     <!-- Empty table -->
     <ng-container *ngIf="dataSource.data.length == 0">
-      <p class="fs-4 py-5 text-center">Bạn chưa có phòng trọ nào!</p>
+      <p class="fs-4 py-5 text-center">Bạn chưa có đặt lịch nào!</p>
     </ng-container>
 
     <!-- Mini Loading -->
