--- a/FE/src/app/features/reservation/components/reservation-insert/reservation-insert.component.html
+++ b/FE/src/app/features/reservation/components/reservation-insert/reservation-insert.component.html
@@ -18,7 +18,7 @@
           [min]="minDate"
           [matDatepicker]="picker"
           placeholder="MM/DD/YYYY"
-          formControlName="date"
+          formControlName="reservationDate"
         />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -29,12 +29,14 @@
         <input
           matInput
           type="number"
-          min="1"
-          max="12"
+          min="0"
+          max="23"
+          placeholder="0"
           class="hide-spin"
-          formControlName="hour"
+          formControlName="reservationHour"
         />
-        @if( hour?.invalid && (hour?.dirty || hour?.touched) ){
+        @if( reservationHour?.invalid && (reservationHour?.dirty ||
+        reservationHour?.touched) ){
         <mat-error>{{ errorForHour() }}</mat-error>
         }
       </mat-form-field>
@@ -45,11 +47,13 @@
           matInput
           type="number"
           min="0"
-          max="60"
+          max="59"
+          placeholder="0"
           class="hide-spin"
-          formControlName="minute"
+          formControlName="reservationMinute"
         />
-        @if( minute?.invalid && (minute?.dirty || minute?.touched) ){
+        @if( reservationMinute?.invalid && (reservationMinute?.dirty ||
+        reservationMinute?.touched) ){
         <mat-error>{{ errorForMinute() }}</mat-error>
         }
       </mat-form-field>
