--- a/FE/src/app/features/reservation/components/reservation-list/reservation-list.component.html
+++ b/FE/src/app/features/reservation/components/reservation-list/reservation-list.component.html
@@ -15,16 +15,16 @@
         <!-- Room name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-          <td mat-cell *matCellDef="let element">{{ element.room?.name }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.post?.room?.name }}</td>
         </ng-container>
 
-        <!-- CreateAt Column -->
-        <ng-container matColumnDef="createAt">
+        <!-- CreatedAt Column -->
+        <ng-container matColumnDef="createdAt">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Ngày yêu cầu
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.createAt | date : "MM/dd/yyyy" }}
+            {{ element.createdAt | date : "dd/MM/yyyy" }}
           </td>
         </ng-container>
 
@@ -34,7 +34,7 @@
             Thời gian mong muốn
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.reservationDate | date : "MM/dd/yyyy hh:mm a" }}
+            {{ element.reservationDate | date : "dd/MM/yyyy hh:mm a" }}
           </td>
         </ng-container>
 
