--- a/FE/src/app/core/layout/header/header.component.html
+++ b/FE/src/app/core/layout/header/header.component.html
@@ -29,7 +29,9 @@
         <div *appIfAuthenticated="true" class="d-flex gap-2">
           <button
             class="btn btn-dark fs-4 border-0 rounded-pill"
-            [matBadge]="user()?.cart?.cartDetails?.length"
+            [matBadgeHidden]="cart()?.cartDetails?.length == 0"
+            [matBadge]="cart()?.cartDetails?.length"
+            matBadgeColor="warn"
             routerLink="/cart"
           >
             <i class="fa-solid fa-cart-arrow-down"></i>
