--- a/FE/src/app/features/booking/components/booking-list/booking-list.component.html
+++ b/FE/src/app/features/booking/components/booking-list/booking-list.component.html
@@ -18,6 +18,16 @@
           </td>
         </ng-container>
 
+        <!-- Request date Column-->
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Ngày yêu cầu
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdAt | date : "dd/MM/yyyy" }}
+          </td>
+        </ng-container>
+
         <!-- Status payment Column-->
         <ng-container matColumnDef="paymentStatus">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -50,7 +60,11 @@
         <ng-container matColumnDef="detail">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Chức năng</th>
           <td mat-cell *matCellDef="let element">
-            <button type="button" class="btn btn-link btn-sm btn-rounded" (click)="onDetail(element)">
+            <button
+              type="button"
+              class="btn btn-outline-dark btn-sm btn-rounded m-1"
+              (click)="onDetail(element)"
+            >
               Xem chi tiết
             </button>
           </td>
@@ -68,7 +82,11 @@
               <i class="fa-solid fa-ellipsis-vertical"></i>
             </button>
             <mat-menu #menu class="px-1">
-              <button (click)="onCancel(element.id, element.status)" mat-menu-item>
+              <button
+                [disabled]="element.status !== 'Pending'"
+                (click)="onCancel(element.id, element.status)"
+                mat-menu-item
+              >
                 <i class="fa-solid fa-ban"></i>
                 <span>Hủy đơn</span>
               </button>
