--- a/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
+++ b/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
@@ -10,7 +10,7 @@
       <h4 class="flex-fill">{{ lessor?.fullName }}</h4>
       <div class="d-flex align-items-center gap-2 pb-2">
         <span>{{ lessor?.numberOfFollowers }}</span>
-        <app-like></app-like>
+        <app-like [isSaved]="checkSave(lessor?.id)" (save)="onSave($event)"></app-like>
       </div>
     </div>
     <div class="d-flex flex-wrap justify-content-between align-items-center">
