--- a/FE/src/app/features/management/lessor/pages/lessor-booking/lessor-booking.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-booking/lessor-booking.component.html
@@ -12,83 +12,40 @@
   <div class="position-relative">
     <div [hidden]="dataSource.data.length == 0">
       <table mat-table [dataSource]="dataSource" matSort>
-        <!-- Room name Column -->
-        <ng-container matColumnDef="roomName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
+        <!-- Tenant Column -->
+        <ng-container matColumnDef="tenant">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Người thuê</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.room?.name }}
+            <p class="fw-normal mb-1">
+              {{ element.tenant?.fullName }}
+            </p>
+            <p class="text-muted mb-0">
+              {{ element.tenant?.phoneNumber }}
+            </p>
           </td>
         </ng-container>
 
-        <!-- Tenant name Column -->
-        <ng-container matColumnDef="tenantName">
+        <!-- Request date Column-->
+        <ng-container matColumnDef="createdAt">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Tên người thuê
+            Ngày yêu cầu
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.tenant?.fullName }}
+            {{ element.createdAt | date : "dd/MM/yyyy" }}
           </td>
         </ng-container>
 
-        <!-- Tenant number phone Column -->
-        <ng-container matColumnDef="tenantNumberPhone">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Số điện thoại
-          </th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.tenant?.phoneNumber }}
-          </td>
-        </ng-container>
-
-        <!-- NumberOfTenant Column -->
-        <ng-container matColumnDef="numberOfTenant">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Số người</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.numberOfTenant }}
-          </td>
-        </ng-container>
-
-        <!-- IntendedIntoDate Column -->
-        <ng-container matColumnDef="intendedIntoDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Ngày bắt đầu
-          </th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.intendedIntoDate | date : "dd/MM/yyyy" }}
-          </td>
-        </ng-container>
-
-        <!-- EndDate Column-->
-        <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Ngày kết thúc
-          </th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.endDate | date : "dd/MM/yyyy" }}
-          </td>
-        </ng-container>
-
-        <!-- Room status Column-->
-        <ng-container matColumnDef="roomStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Trạng thái phòng
-          </th>
-          <td mat-cell *matCellDef="let element">
-            {{ conditionFilter[element.room?.condition] }}
-          </td>
-        </ng-container>
-
-        <!-- Satus payment Column-->
+        <!-- Status payment Column-->
         <ng-container matColumnDef="paymentStatus">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Trạng thái thanh toán
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.paymentstatus }}
+            {{ statusInvoiceFilter[element.invoice?.status || ""] }}
           </td>
         </ng-container>
 
-        <!-- Satus Lease Column-->
+        <!-- Status Lease Column-->
         <ng-container matColumnDef="leaseStatus">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Trạng thái hợp đồng
@@ -102,7 +59,21 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
           <td mat-cell *matCellDef="let element">
-            {{ StatusBookingFilter[element.status] }}
+            {{ statusBookingFilter[element.status] }}
+          </td>
+        </ng-container>
+
+        <!-- Detail Column-->
+        <ng-container matColumnDef="detail">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Chức năng</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              type="button"
+              class="btn btn-outline-dark btn-sm btn-rounded m-1"
+              (click)="onDetail(element)"
+            >
+              Xem chi tiết
+            </button>
           </td>
         </ng-container>
 
@@ -119,19 +90,16 @@
             </button>
             <mat-menu #menu class="px-1">
               <button
-                (click)="onAccept(element.id, element.status)"
+                (click)="onLease(element.id, element.status)"
                 mat-menu-item
               >
-                <i class="fa-solid fa-wrench"></i>
-                <span>Chấp nhận</span>
+                <i class="fa-solid fa-ban"></i>
+                <span>Xem hợp đồng</span>
               </button>
-              <button
-                (click)="onRefuse(element.id, element.status)"
-                mat-menu-item
-              >
-                <i class="fa-solid fa-trash"></i>
-                <span>Từ chối</span>
-              </button>
+              <!-- <button (click)="onPayment(element)" mat-menu-item>
+                <i class="fa-brands fa-cc-amazon-pay"></i>
+                <span>Thanh toán</span>
+              </button> -->
             </mat-menu>
           </td>
         </ng-container>
